<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raisin_push_orientation_controller</name>
  <version>0.0.0</version>
  <description>
    <family>raisin_push_orientation_controller</family>
    raisin_push_orientation_controller
  </description>
  <maintainer email="ydh0725@kaist.ac.kr">donghoon</maintainer>
  <license>RAILAB License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>raisin_controller</depend>
  <depend>raisin_torch</depend>
  <depend>raisin_interfaces</depend>
  <depend>raisin_data_logger</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>raisin_controller</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
